# tidy3d-webapi

./: .buildinfo  .gitignore  .pylintrc  README.md  genindex.html  http-routingtable.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: codestyle.yml  docs.yml
docs/: swagger.json
docs/source/: conf.py  index.rst  openapi.yaml
integration_tests/: _test_auth.py  test_material_fitter.py  test_tidy3d_folder.py  test_tidy3d_task.py  test_webapi.py
tests/: test_cli.py  test_material_fitter.py  test_sts.py  test_sts_token.py  test_tidy3d_folder.py  test_tidy3d_material_library.py  test_tidy3d_task.py  test_tidy3d_webapi.py  test_webapi.py
tests/data/: nk_data.csv
tidy3d_webapi/: __init__.py  cache.py  environment.py  http_management.py  material_fitter.py  material_libray.py  s3_utils.py  s3utils.py  simulation_task.py  sts_token.py  tidy3d_types.py  types.py  version.py  webapi.py
tidy3d_webapi/cli/: app.py
